// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<nav
  className="css-i6ei9o"
  data-cy="nav"
>
  <div
    className="css-exb9x5"
  >
    <a
      href="/"
    >
      thisbounty.com
    </a>
  </div>
  <div
    className="css-ade8ji"
  >
    <button
      className="chakra-button css-1v83zyk"
      data-cy="signIn"
      onClick={[Function]}
    >
      Sign in
    </button>
  </div>
</nav>
`;

exports[`renders correctly 2`] = `
<nav
  className="css-i6ei9o"
  data-cy="nav"
>
  <div
    className="css-exb9x5"
  >
    <a
      href="/"
    >
      thisbounty.com
    </a>
  </div>
  <div
    className="css-ade8ji"
  >
    <p
      className="chakra-text css-1lj023j"
    >
      Welcome, 
      test
    </p>
    <button
      className="chakra-button css-oqfhsh"
      data-cy="signOut"
      onClick={[Function]}
    >
      Sign out
    </button>
  </div>
</nav>
`;
